--- a/certifications.html
+++ b/certifications.html
@@ -12,7 +12,7 @@
       <h2>Certifications</h2>
       <div class="cert-grid">
         <div class="cert-card">
-          <img src="/port/cert.jpg" alt="Cybersecurity Certificate">
+          <img src="cert.jpg" alt="Cybersecurity Certificate">
           <p>The Linux Foundation Cyber Security Essential Certificate – 2024</p>
         </div>
       </div>
