--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container header-flex">
-      <img src="/port/ME.jpg" alt="Profile Picture" class="profile-pic" />
+      <img src="ME.jpg" alt="Profile Picture" class="profile-pic" />
       <div>
         <h1>Karla Lorraine T. Lina</h1>
         <p>Web Developer</p>
